Fix navbar on IE

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -13,7 +13,7 @@
   @media (min-width: $small-up) {
     min-height: 55.95px;
     height: initial;
-    max-height: none;
+    max-height: 87px;
   }
 }
 
